Native/Test/KL/loop-var-decl-scope.out
loop-var-decl-scope.kl:9:10: error: 'i': symbol not found
