Native/Test/KL/loop-var-decl-scope.kl
/*
 *  Copyright 2010-2012 Fabric Technologies Inc. All rights reserved.
 */

operator entry()
{
  for ( var Integer i=0; i<10; ++i )
    ;
  report i;
}
